--- a/scss/modules/grid/_module.scss
+++ b/scss/modules/grid/_module.scss
@@ -1,7 +1,7 @@
 /// 
 /// # Grid Module
 /// Contains column, row, and stack components.
-/// @group module
+/// @group grid
 /// @author David Khourshid
 /// 
 
