--- a/scss/modules/grid/_module.scss
+++ b/scss/modules/grid/_module.scss
@@ -1,9 +1,9 @@
-/// 
+////
 /// # Grid Module
 /// Contains column, row, and stack components.
 /// @group grid
 /// @author David Khourshid
-/// 
+////
 
 // Horizontal Grid Settings
 $grid-column-fractions: (
