--- a/scss/modules/buttons/_module.scss
+++ b/scss/modules/buttons/_module.scss
@@ -48,4 +48,4 @@ $button-color: if(is-dark($button-bgcolor), $button-color-dark, $button-color-li
 	'_mixins',
 	'_components',
 	'_themes',
-	'_classes';
+	'_exports';
