--- a/scss/modules/fields/_exports.scss
+++ b/scss/modules/fields/_exports.scss
@@ -2,13 +2,13 @@
 // Fields Classes
 // ==============
 
-@include export(fieldset) {
+@include export('fieldset') {
     fieldset, .fieldset {
         @extend %fieldset !optional;
     }
 }
 
-@include export(field) {
+@include export('field') {
     #{prefixed-class('field')} {
         @extend %field;
     }
