--- a/scss/modules/fields/_module.scss
+++ b/scss/modules/fields/_module.scss
@@ -13,4 +13,4 @@ $field-horizontal-label-padding: 0 $label-padding-horizontal !default;
 @import
 	'_mixins',
 	'_components',
-	'_classes';
+	'_exports';
