--- a/scss/modules/forms/_module.scss
+++ b/scss/modules/forms/_module.scss
@@ -60,4 +60,4 @@ $form-checkbox-margin-right: $form-radio-margin-right !default;
 	'_mixins',
 	'_components',
 	'_themes',
-	'_classes';
+	'_exports';
