--- a/scss/modules/icons/_exports.scss
+++ b/scss/modules/icons/_exports.scss
@@ -4,7 +4,7 @@
 
 // Icon Classes
 
-@include export(icons) {
+@include export('icons') {
     #{prefixed-class($icon-prefix)} {
         @extend %icon;
     }
