--- a/scss/modules/labels/_module.scss
+++ b/scss/modules/labels/_module.scss
@@ -70,4 +70,4 @@ $popover-margin-horizontal: $popover-margin-vertical !default;
 	'_mixins',
 	'_components',
 	'_themes',
-	'_classes';
+	'_exports';
