--- a/scss/modules/drawer/_module.scss
+++ b/scss/modules/drawer/_module.scss
@@ -6,10 +6,10 @@ $drawer-positions: (left, right, top, bottom) !default;
 $drawer-peek-width: 3rem !default;
 $drawer-static-width: 15rem !default;
 $drawer-static-height: 15rem !default;
-$drawer-full-width: column-width(10) !default;
-$drawer-full-height: row-height(10) !default;
-$drawer-half-width: column-width(1/2) !default;
-$drawer-half-height: row-height(1/2) !default;
+$drawer-full-width: grid-span(10) !default;
+$drawer-full-height: grid-span(10) !default;
+$drawer-half-width: grid-span(1/2) !default;
+$drawer-half-height: grid-span(1/2) !default;
 $drawer-small-width: $drawer-full-width !default;
 $drawer-small-height: $drawer-full-height !default;
 $drawer-medium-width: $drawer-half-width !default;
