Fixing grid column mixin; adding space documentation

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -58,6 +58,9 @@
 // DELETE EVERYTHING BELOW THIS
 
 // Documentation styles
+[ui-sref] {
+    cursor: pointer;
+}
 
 .cz-content {
     @extend %column;
