--- a/scss/modules/grid/_mixins.scss
+++ b/scss/modules/grid/_mixins.scss
@@ -83,9 +83,9 @@
 		}
 
 		@if $gutter {
-			&:not(:last-child) {
-				margin-right: $gutter;
-			}
+			margin-right: $gutter;
+			
+            &:last-child { margin-right: 0; }
 		}
 
 		@if $offset {
